# aspect

./: .gitignore  CLAUDE.md  Cargo.toml  LANGUAGE.md  README.md  TODO.md  build.rs  cloc-aspect-lang.txt  compile-file.sh  loc.sh
.github/workflows/: build_all.yml
aspect-macros/: Cargo.toml
aspect-macros/src/: error_position.rs  expand.rs  generate_tests.rs  lib.rs
demos/: README.md  ask_name.ap  ask_name.tjlb  bench.ap  bench.c  bench.tjlb  calc.ap  calc.tjlb  concat_args.ap  concat_args.tjlb  float_demo.ap  float_demo.tjlb  hello.ap  hello.tjlb  libc_less.ap  life.ap  life.tjlb  list_init.ap  list_init.tjlb  mandelbrot.ap  mandelbrot.tjlb  sort_demo.ap  sort_demo.tjlb  stress_test.ap  stress_test.c  stress_test.tjlb  string_demo.ap  string_demo.tjlb  types.ap  types.tjlb  vec_demo.ap  vec_demo.tjlb  vm.ap  vm.tjlb  wordfreq.ap  wordfreq.tjlb
doc/: 00-overview.md  01-lexer.md  03-ast.md  04-symbol-table.md  05-typechecker.md  06-codegen.md  07-testing.md  08-parser-macro-rewrite.md  09-syntax-reference.md  10-modules.md  handbook.md
doc/compiler/: 00-overview.md  01-lexer.md  02-parser.md  03-ast.md  04-symbol-table.md  05-typechecker.md  06-codegen.md  07-testing.md  08-parser-macro-rewrite.md  09-syntax-reference.md  10-modules.md  11-rules.md
doc/plans/: Areas-And-Refinements.md  Backend-Without-LLVM.md  Codebase-Refactor.md  Codegen-Refactor.md  Quote-Plan.md  (+8 more)
src/: asm.rs  lib.rs  main.rs  scope.rs  target.rs
tests/: integration_tests.rs
tjlb-macros/: Cargo.toml
vscode-aspect/: language-configuration.json  package.json
vscode-tjlb/: language-configuration.json  package.json
(+380 files in other folders)
