[workspace]
members = [".", "aspect-macros"]

[package]
name = "aspect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aspc"
path = "src/main.rs"

[lib]
name = "aspect"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
inkwell = { version = "0.9.0", default-features = false, features = ["llvm19-1", "target-x86"] }
anyhow = "1.0.102"
indexmap = "2"
aspect-macros = { path = "aspect-macros" }

[dev-dependencies]
pretty_assertions = "1.4.1"
